--- a/Tutorial4/TextSimilarity/docker-compose.yml
+++ b/Tutorial4/TextSimilarity/docker-compose.yml
@@ -2,10 +2,10 @@ version: '3'
 
 services:
     web:
-        build: './web'
+        build: ./web
         ports:
             - "5000:5000"
         links:
             - db
     db:
-        build: './db'
+        build: ./db
